; ModuleID = '/home/carl/AnghaBench/linux/security/keys/extr_keyring.c_key_remove_domain.c'
source_filename = "/home/carl/AnghaBench/linux/security/keys/extr_keyring.c_key_remove_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_tag = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @key_remove_domain(%struct.key_tag* %0) #0 {
  %2 = alloca %struct.key_tag*, align 8
  store %struct.key_tag* %0, %struct.key_tag** %2, align 8
  %3 = load %struct.key_tag*, %struct.key_tag** %2, align 8
  %4 = getelementptr inbounds %struct.key_tag, %struct.key_tag* %3, i32 0, i32 0
  store i32 1, i32* %4, align 4
  %5 = load %struct.key_tag*, %struct.key_tag** %2, align 8
  %6 = call i32 @key_put_tag(%struct.key_tag* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 (...) @key_schedule_gc_links()
  br label %10

10:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @key_put_tag(%struct.key_tag*) #1

declare dso_local i32 @key_schedule_gc_links(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
